crates/oxidd-derive/tests/countable/union.stderr
error: `Countable` cannot be derived for `union`s
 --> tests/countable/union.rs:4:1
  |
4 | union Tag {
  | ^^^^^
